# standard_paths

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: example.rs  find_executables.rs  folderid_generator.rs  list_paths.rs  locate.rs
src/: lib.rs  linux.rs  macros.rs  unix.rs  windows.rs
