[package]
name = "standard_paths"
description = "A port of QStandardPaths class which provides methods for accessing standard paths on the local filesystem (config, cache, user directories and etc.)."
version = "1.0.0"
authors = ["Petr Tsymbarovich <petr@tsymbarovich.ru>"]
repository = "https://github.com/mentaljam/standard_paths"
documentation = "https://docs.rs/standard_paths"
keywords = ["standard", "paths", "location", "directory", "storage"]
categories = ["filesystem"]
license = "MIT"
readme = "README.md"

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["shlobj", "combaseapi", "winbase"] }

[dev_dependencies]
argparse = "0.2"
