[package]
name = "standard_paths"
description = """\
    A port of QStandardPaths class which provides methods for accessing \
    standard paths on the local filesystem (config, cache, user directories \
    and etc.).\
    """
version = "2.1.0"
edition = "2021"
authors = ["Petr Tsymbarovich <petr@tsymbarovich.ru>"]
repository = "https://github.com/mentaljam/standard_paths"
documentation = "https://docs.rs/standard_paths"
keywords = ["standard", "paths", "location", "directory", "storage"]
categories = ["filesystem"]
license = "MIT"
readme = "README.md"

[dependencies]
home = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "^0.27", default-features = false, features = ["ioctl", "user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["shlobj", "combaseapi", "winbase"] }

[dev-dependencies]
argparse = "0.2"
